# RDPCallRecorder

./: .gitignore  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_EN.md  README_RU.md  build.bat  config.ini  setup_deps.bat
include/: FlacEncoder.h  OpusEncoder.h
installer/: installer.nsi
src/: AudioMonitor.cpp  AudioMonitor.h  AutoUpdate.cpp  AutoUpdate.h  Config.cpp  Config.h  FlacEncoder_stub.cpp  Globals.h  Logger.cpp  Logger.h  MainPanel.cpp  MainPanel.h  MonitorThread.cpp  MonitorThread.h  OpusEncoder_stub.cpp  ProcessUtils.cpp  ProcessUtils.h  SettingsDialog.cpp  SettingsDialog.h  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  WindowUtils.cpp  WindowUtils.h  main.cpp  resource.h  resource.rc
